--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@monaco-editor/react": "^4.7.0",
-    "axios": "^1.9.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
-  },
+  "dependencies":
+  {
+  "@monaco-editor/react": "^4.7.0",
+  "axios": "^1.9.0",
+  "react": "^19.1.0",
+  "react-dom": "^19.1.0",
+  "react-router-dom": "^7.6.0",
+  "react-icons": "^4.12.0"
+ },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
