--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "python-code-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies":
-  {
-  "@monaco-editor/react": "^4.7.0",
-  "axios": "^1.9.0",
-  "react": "^19.1.0",
-  "react-dom": "^19.1.0",
-  "react-router-dom": "^7.6.0",
-  "react-icons": "^4.12.0"
- },
+
+  "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "axios": "^1.9.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
+    "xterm": "^5.3.0"
+  },
+
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
